--- a/styles/main.css
+++ b/styles/main.css
@@ -7,7 +7,17 @@
     background-color: rgb(156, 168, 201);
     border: 2px solid black;
 }
+#logo{
+    border-radius: 15px;
+    width: 100px;
+}
 
+.add-button{
+    border-radius: 5px;
+    background-color: lightgreen;
+    padding: 5px 10px;
+    border: none; 
+}
 .card {
     background: rgb(244, 244, 166);
     padding: 15px;
@@ -49,6 +59,24 @@
     position: absolute;
     right: -12px;
     top: -12px;
+}
+
+.button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    border-radius: 12px;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    transition-duration: 0.4s;
+}
+
+.button:hover {
+    background-color: #4CAF50; /* Green */
+    color: white;
 }
 
 /*------- FORM ------- */
